--- a/login.html
+++ b/login.html
@@ -9,13 +9,13 @@
             <dl>
                 <dt>아이디</dt>
                 <dd>
-                    <input type="text" name="id">
+                    <input type="text" name="memId" placeholder="아이디를 입력...">
                 </dd>
             </dl>
             <dl>
                 <dt>비밀번호</dt>
                 <dd>
-                    <input type="password" name="pw">
+                    <input type="password" name="memPw" placeholder="비밀번호를 입력...">
                 </dd>
             </dl>
             <input type="submit" value="로그인">
