--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="ute-8">
-        <title>로그인</title>
+        <title>로그인 창</title>
     </head>
     <body>
         <form method="POST" action="/login">
